[X] portfolio panel need to be changed (talk to aga about rest of sub-websites)
[X] accesibility buttons with aria label, alternative with images and make menu list 
[X] testing on mozilla, saffari ant other browsers i need to do more research on saffari browser
[X] text size 
[X] social media link
[X] logo size and after click to main page
[X] form authentycation
[X] more photo